@@ -344,6 +344,7 @@ xrus.form.vSpace: 0
 !-------------------------------------------------------
 
 *props_xaw*title: Properties
+*props_xaw*iconName: Xrus Properties
 
 *props_xaw*locker_toggle.label: Locking
 
@@ -493,3 +494,4 @@ xrus.form.vSpace: 0
 *props_xaw*cancel_button.fromVert: default2_button
 
 *props_xaw.error_shell.title: Error
+*props_xaw.error_shell.iconName: Xrus Error
