@@ -1,3 +1,8 @@
+2001-08-16  lav
+
+	* xrus.c, xrus.h, props.c: support WM_DELETE_WINDOW properly in Xaw mode.
+	* Xrus.ad: set iconName for Xaw properties/error windows.
+
 2001-05-25  lav
 
 	* xrus.c, xrus.h: add keylog support; handle SIGUSR1 and SIGUSR2.
